# provider-provisioning-adapter

./: .gitignore  .template.env  .template.systemd  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml
api/: config.py  main.py
scripts/: make.sh
src/provider_provisioning_adapter/: __init__.py  config.py  main.py  model.py
tests/: test_main.http
