[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "provider_provisioning_adapter"
description = "Starterkit for working with Underline's Sonar integration."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "uvicorn",
    "gunicorn",
    "fastapi",
    "httpx"
]

[tool.setuptools_scm]

[project.scripts]
ppa-serve = "provider_provisioning_adapter:serve"