[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/provider_provisioning_adapter/_version.py"

[project]
name = "provider_provisioning_adapter"
description = "Starterkit for working with Underline's Sonar integration."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "uvicorn",
    "gunicorn",
    "fastapi",
    "httpx"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "provider_provisioning_adapter._version.version"}

[project.scripts]
ppa-serve = "provider_provisioning_adapter:serve"